# ejs

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
plugins/: index.d.ts
plugins/bar/: main.js  plugin.yaml
plugins/foo/: main.js  plugin.yaml
ports/quickjs-ng/: enable_build_libc.patch  portfile.cmake
qjsx/: CMakeLists.txt
qjsx/include/qjsx/: context.h  qjsx.h  runtime.h  string.h  value.h
qjsx/src/: context.cpp  runtime.cpp  string.cpp  value.cpp
src/: app.cpp  app.h  ejs.cpp  env.h  plugin.cpp  plugin.h  plugin_manager.cpp  plugin_manager.h  plugin_yaml.h
